--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   --padding: 100px 0;
   --headings: 3rem;
   --fontSize: 16px;
-  --transition: .3s ease;
+  --transition: .4s ease;
 }
 /*************
 basic styles
@@ -31,6 +31,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 a {
   text-decoration: none;
+  transition: var(--transition);
 }
 /*************
 grid sistem
@@ -57,4 +58,45 @@ grid sistem
 .col-12 {width: 100%;}
 [class*="col-"] {
   float: left;
+}
+/*************
+nav
+*************/
+nav {
+  height: 80px;
+  line-height: 80px;
+}
+nav .logo {
+  float: left;
+  text-transform: uppercase;
+  font-size: 1.7rem;
+  font-family: 'Quantico', sans-serif;
+  color: var(--black);
+  padding-left: 100px;
+}
+nav i {
+  color: var(--green);
+}
+nav ul {
+  float: right;
+}
+nav ul li {
+  display: inline-block;
+  transition: var(--transition);
+  border-bottom: 3px solid transparent;
+  position: relative;
+  top: -3px;
+}
+nav ul li a {
+  padding: 0 30px;
+  color: var(--black);
+  text-transform: uppercase;
+}
+.active {
+  border-bottom: 3px solid var(--green);
+  position: relative;
+  top: -3px;
+}
+nav ul li:hover  {
+  border-bottom: 3px solid var(--green);
 }
