--- a/style.css
+++ b/style.css
@@ -116,6 +116,77 @@ nav ul li a {
 nav ul li:hover  {
   border-bottom: 3px solid var(--green);
 }
+/*************
+footer
+*************/
+footer {
+  background: var(--black);
+  padding: var(--padding);
+  color: var(--white);
+}
+footer ul li {
+  list-style: none;
+}
+footer .col-3 {
+  padding: 10px;
+}
+footer img {
+  width: 20%;
+}
+footer a {
+  color: var(--lightGrey);
+  margin-right: 10px;
+}
+footer i {
+  color: var(--green);
+}
+footer i:hover {
+  color: var(--yellow);
+}
+footer h4 {
+  font-size: 1.5rem;
+  padding-bottom: 30px;
+}
+footer h5 {
+  font-size: 1.2rem;
+  padding-bottom: 30px;
+}
+footer input {
+  padding: 15px;
+  border: 2px solid var(--green);
+  background: var(--black);
+  /* width: 150px; */
+  width: 65%;
+}
+footer ::placeholder {
+  color: var(--lightGrey);
+  font-size: 1rem;
+}
+footer button {
+  background: var(--green);
+  transition: var(--transition);
+  border: 2px solid var(--green);
+  position: relative;
+  left: -5px;
+  top: 2px;
+}
+footer button i {
+  color: var(--black);
+}
+footer button i:hover {
+  color: var(--white);
+}
+footer .copy:before {
+  display: block;
+  content: '';
+  height: 1px;
+  width: 80%;
+  margin: 30px auto;
+  background: #3e3636;
+}
+footer .copy {
+  text-align: center;
+}
 /*******************
 H O M E
 ********************/
@@ -228,3 +299,4 @@ works
 .works button:hover {
   background: var(--yellow);
 }
+
