--- a/style.css
+++ b/style.css
@@ -330,5 +330,40 @@ A B O U T
   font-size: 1.5rem;
   margin-bottom: 0px;
 }
+/*********************
+team
+*********************/
+.team {
+  padding: var(--padding);
+  text-align: center;
+}
+.team img {
+  width: 100%;
+  display: block;
+}
+.team h2 + p {
+  padding-bottom: 40px;
+}
+.team .col-3 {
+  padding: 30px;
+}
+.team .description {
+  background: var(--lightGrey);
+  padding: 20px;
+}
+.team .description h4 {
+  font-size: 1.5rem;
+}
+.team .description p {
+  color: var(--green);
+}
+.team i {
+  color: gray;
+  margin: 10px;
+  transition: var(--transition);
+}
+.team .description i:hover {
+  color: var(--green);
+}
 
 
