--- a/style.css
+++ b/style.css
@@ -365,5 +365,24 @@ team
 .team .description i:hover {
   color: var(--green);
 }
+/***************
+promote
+***************/
+.promote {
+  background-image: linear-gradient(rgba(120, 188, 98,.8), rgba(120, 188, 98,.8)), url(img/promote.jpg);
+  background-position: top;
+  background-size: cover;
+  padding: var(--padding);
+  text-align: center;
+  color: var(--white);
+}
+.promote button {
+  background: var(--black);
+  color: var(--white);
+}
+.promote button:hover {
+  background: var(--white);
+  color: var(--black);
+}
 
 
